--- a/client/src/Component/PatientPortal/PatientPortal.css
+++ b/client/src/Component/PatientPortal/PatientPortal.css
@@ -1,65 +1,77 @@
 .patient_portal {
     position: relative;
     width: 100%;
-    background-color: #f5f5f5;
+    background-color: #edf3fb;
+    transition: all 0.5s;
 }
 
-.patient_portal p {
-    text-align: right;
+.patient_portal.pactive {
+    width: calc(100% - 80px);
 }
 
 .portal_navigation {
     position: fixed;
-    width: 300px;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
     background-color: #276ab3;
-    border-left: 10px solid #276ab3;
     transition: 0.5s;
     overflow: hidden;
 }
 
-.portal_navigation.pactive {
-    width: 80px;
-}
-
 .portal_logo {
     position: relative;
-    width: 70px;
+    width: 150px;
     height: 100px;
     overflow: hidden;
-    pointer-events: none;
 }
 
 .portal_logo img {
     position: absolute;
-    top: .6rem;
-    left: -.1rem;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.5s;
+}
+
+.portal_navigation .toggle button {
+    position: absolute;
+    top: 48px;
+    width: 32px;
+    height: 32px;
+    z-index: 100;
+    border-radius: 50%;
+    background: #276ab3;
+    box-shadow: 0 0 4px rgb(255, 255, 255), 0 0 7px rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+    letter-spacing: inherit;
+    color: inherit;
+    font-size: inherit;
+    text-align: inherit;
+    padding: 0;
+    font-family: inherit;
+    outline: none;
+    transition: all 0.5s;
 }
 
 .portal_navigation ul {
     display: block;
 }
 
-.portal_navigation ul li {
-    margin: 1rem 0;
-}
-
 .portal_navigation ul li .active_link {
+    background-color: #f5f5f5;
     position: relative;
     width: 100%;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
-}
-
-.portal_navigation ul li .active_link {
-    background-color: #f5f5f5;
 }
 
 .portal_navigation ul li a {
@@ -69,8 +81,6 @@
     display: flex;
     align-items: center;
     color: #f5f5f5;
-    padding: 0;
-    margin: 0;
     font-size: inherit;
     opacity: 0.6;
     font-weight: 100;
@@ -82,12 +92,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    color: #f5f5f5;
-    opacity: 1;
-    font-weight: 500;
-}
-
-.portal_navigation ul li a.active_link {
+    font-weight: 600;
     color: #276ab3;
     opacity: 1;
 }
@@ -120,7 +125,7 @@
 
 .portal_navigation ul li a:hover{
     animation: underline 1.8s ease-out;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
     color: #f5f5f5;
 }
 
@@ -145,9 +150,7 @@
 .portal_navigation ul li a .icon {
     position: relative;
     display: block;
-    min-width: 60px;
     padding-left: 1rem;
-    text-align: center;
 }
 
 .portal_navigation ul li a span {
@@ -173,6 +176,7 @@
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 0.375rem;
+    transition: all 0.5s;
 }
 
 .portal_footer .user {
@@ -189,7 +193,9 @@
 }
 
 .portal_footer .detail h4,
-.patient_topbar .user_details h4 {
+.patient_topbar .user_details h4,
+.patient_settings h4,
+.patient_settings-details span:nth-of-type(2) {
     font-weight: 600;
 }
 
@@ -201,8 +207,9 @@
     position: absolute;
     width: calc(100% - 300px);
     left: 300px;
+    min-height: 100vh;
     transition: 0.5s;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: #f5f5f5;
 }
 
@@ -211,40 +218,28 @@
     left: 80px;
 }
 
+.patient_main-title {
+    font-weight: 600;
+    margin-bottom: 2rem;
+}
+
 .patient_topbar {
     position: fixed;
-    left: 300px;
-    width: calc(100% - 300px);
+    width: calc(100% - 285px);
+    left: 285px;
     z-index: 1000;
-    transition: 0.5s;
-    height: 60px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+    transition: 0.5s;
 }
 
-.patient_main.pactive .patient_topbar {
+.patient_portal.pactive .patient_topbar {
     width: calc(100% - 80px);
     left: 80px;
-}
-
-.patient_topbar .toggle {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
- 
-.patient_topbar .toggle i  {
-    border-radius: 0.375rem;
-    background: #276ab3;
-    color: #f5f5f5;
-    padding: .3rem;
 }
 
 .patient_topbar .search {
@@ -284,11 +279,12 @@
     position: absolute;
     bottom: 0.60rem;
     left: 10px;
+    cursor: default;
 }
 
 .patient_topbar .user_details {
-    grid-gap: 0.75rem;
-    gap: 0.75rem;
+    grid-gap: 1rem;
+    gap: 1rem;
     align-items: center;
     display: flex;
 }
@@ -360,7 +356,8 @@
     color: #f5f5f5;
 }
 
-.patient_topbar .user_details .img_box {
+.patient_topbar .user_details .img_box,
+.patient_settings .img_box {
     position: relative;
     width: 40px;
     height: 40px;
@@ -369,11 +366,257 @@
     pointer-events: none;
 }
 
-.patient_topbar .user_details img {
+.patient_topbar .user_details img,
+.patient_settings img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.patient_content {
+    position: relative;
+    top: 2rem;
+    width: 100%;
+    padding: 3rem 2rem 5rem;
+}
+
+.patient_settings {
+    display: flex;
+    width: 100%;
+    gap: 8%;
+} 
+
+.patient_settings-left {
+    height: 25rem;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px  5px 20px rgba(0, 0, 0, 0.3);
+    animation: slideInLeft 1.5s ease-in-out;
+}
+
+@keyframes slideInLeft {
+    0% {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0%);
+    }
+} 
+
+.patient_settings-left .img_box {
+    width: 10rem;
+    height: 10rem;
+}
+
+.patient_settings-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height:  1.6;
+    margin-bottom: 10px;
+}
+
+.patient_settings-modals {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 3rem;
+}
+
+.patient_settings-modals button {
+    width: 100%;
+    height: 3rem;
+    border-radius: 10px;
+    margin-top: 1rem;
+    cursor: pointer;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+}
+
+.patient_settings-modals button:hover {
+    background: #e8ecf0;
+    color: #276ab3;
+}
+
+.patient_settings-modals button.current {
+    background: #e8ecf0;
+    color: #276ab3;
+}
+
+.patient_settings-modals button span {
+    margin-left: 1rem;
+    font-size: .9rem;
+}
+
+.patient_settings-right {
+    flex: 2;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0px  5px 20px rgba(0, 0, 0, 0.3);
+    animation: slideInRight 1.5s ease-in-out;
+}
+
+@keyframes slideInRight {
+    0% {
+      opacity: 0;
+      transform: translateX(100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0%);
+    }
+} 
+
+.modal_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+    margin-bottom: 1rem;
+}
+
+.modal_container label {
+    color: #222;
+    position: relative;
+    font-weight: 700;
+    margin-bottom: .5rem;
+}
+
+.modal_img {
+    border: 2px dashed rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 8px;
+    height: 25vh;
+}
+
+.modal_container .modal_input {
+    border: .1px solid rgba(0, 0, 0, 0.3);
+    color: #222;
+    width: 100%;
+    padding: 15px;
+    height: 38px;
+    border-radius: 8px;
+    font-size: 14px;
+}
+
+.modal_container-btn button,
+.modal_container-btns button {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: #276ab3;
+    border-radius: 8px;
+    font-size: .9rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.modal_container-btns {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+}
+
+.modal_container-btn button:hover,
+.modal_container-btns button:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 1024px) and (max-width: 1300px) {
+    .portal_logo {
+        display: none;
+    }
+
+    .portal_navigation {
+        flex-direction: column-reverse;
+        justify-content: center;
+        width: 250px;
+        border-left: 5px solid #276ab3;
+    }
+
+    .portal_navigation.pactive {
+        width: 70px;
+    }
+
+    .portal_navigation ul {
+        margin: 2rem 0 0 0;
+    }
+
+    .portal_navigation ul li {
+        margin: 0;
+    }
+
+    .portal_navigation ul li a {
+        height: 50px;
+    }
+    
+    .portal_navigation ul li a .icon {
+        padding-left: 0;
+    }
+    
+    .portal_navigation ul li a .icon svg {
+        width: 20px;
+    }
+
+    .portal_footer {
+        padding-left: 1.25rem;
+    }
+
+    .portal_footer .user {
+        margin-left: 1.25rem;
+    }
+
+    .patient_topbar {
+        left: 250px;
+        width: calc(100% - 250px);
+    }
+
+    .patient_main.pactive {
+        width: calc(100% - 70px);
+        left: 70px;
+    }
+    
+    .patient_topbar {
+        left: 250px;
+        width: calc(100% - 250px);
+    }
+    
+    .patient_main.pactive .patient_topbar {
+        width: calc(100% - 70px);
+        left: 70px;
+    }
+
+    .patient_topbar .toggle i {
+        padding: .2rem;
+    }
+
+    .patient_topbar .toggle i svg {
+        width: 20px;
+        height: 20px;
+    }
 }
